--- a/index.html
+++ b/index.html
@@ -15,79 +15,121 @@
     <title>Moshify</title>
   </head>
   <body>
-    <section class="block container plans--block">
-      <div class="container grid grid--1x3">
-        <div class="plan">
-          <div class="card card--secondary">
-            <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
-              <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--secondary badge--small">10% OFF</span>
-              <span class="plan__description">Easy to start on the cloud</span>
-            </header>
-            <div class="card__body">
-              <ul class="list list--tick">
-                <li class="list__item">Unlimited Websites</li>
-                <li class="list__item">Unlimited Bandwidth</li>
-                <li class="list__item">100 GB SSD Sotrage</li>
-                <li class="list__item">3 GB RAM</li>
-              </ul>
-
-              <button class="btn btn-primary btn--outline btn--block">
-                Buy Now
-              </button>
-            </div>
-          </div>
+    <section class="block container">
+      <header class="block__header">
+        <h2>Host on the Cloud to keep Growing</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem, hic!
+        </p>
+      </header>
+      <!-- 1st -->
+      <div class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--secondary">
+              <use xlink:href="images/sprite.svg#easy"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Super Easy To Use</h3>
+          <p class="text--small">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
+            numquam magni libero atque doloremque, fugit voluptate,
+          </p>
+          <a href="#" class="link-arrow">Learn More</a>
         </div>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="/images/easy.webp 1x, /images/easy@2x.webp 2x"
+          />
+          <source
+            type="image/jpg"
+            srcset="/images/easy.jpg 1x, /images/easy@2x.jpg 2x"
+          />
+          <img class="feature__img" src="/images/easy.jpg" alt="" />
+        </picture>
+      </div>
 
-        <div class="plan plan--popular">
-          <div class="card card--primary">
-            <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
-              <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--primary badge--small">10% OFF</span>
-              <span class="plan__description">Easy to start on the cloud</span>
-            </header>
-            <div class="card__body">
-              <ul class="list list--tick">
-                <li class="list__item">Unlimited Websites</li>
-                <li class="list__item">Unlimited Bandwidth</li>
-                <li class="list__item">100 GB SSD Sotrage</li>
-                <li class="list__item">3 GB RAM</li>
-              </ul>
-
-              <button class="btn btn-primary btn--outline btn--block">
-                Buy Now
-              </button>
-            </div>
-          </div>
+      <!-- 2ND -->
+      <div class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--secondary">
+              <use xlink:href="images/sprite.svg#computer"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Simply Fast Websites</h3>
+          <p class="text--small">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
+            numquam magni libero atque doloremque, fugit voluptate,
+          </p>
+          <a href="#" class="link-arrow">Learn More</a>
         </div>
-
-        <div class="plan">
-          <div class="card card--secondary">
-            <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
-              <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--secondary badge--small">10% OFF</span>
-              <span class="plan__description">Easy to start on the cloud</span>
-            </header>
-            <div class="card__body">
-              <ul class="list list--tick">
-                <li class="list__item">Unlimited Websites</li>
-                <li class="list__item">Unlimited Bandwidth</li>
-                <li class="list__item">100 GB SSD Sotrage</li>
-                <li class="list__item">3 GB RAM</li>
-              </ul>
-
-              <button class="btn btn-primary btn--outline btn--block">
-                Buy Now
-              </button>
-            </div>
-          </div>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="/images/fast.webp 1x, /images/fast@2x.webp 2x"
+          />
+          <source
+            type="image/jpg"
+            srcset="/images/fast.jpg 1x, /images/fast@2x.jpg 2x"
+          />
+          <img class="feature__img" src="/images/fast.jpg" alt="" />
+        </picture>
+      </div>
+      <!-- 3RD -->
+      <div class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--secondary">
+              <use xlink:href="images/sprite.svg#wordpress"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Wordpress Made Easy</h3>
+          <p class="text--small">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
+            numquam magni libero atque doloremque, fugit voluptate,
+          </p>
+          <a href="#" class="link-arrow">Learn More</a>
         </div>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="/images/wordpress.webp 1x, /images/wordpress@2x.webp 2x"
+          />
+          <source
+            type="image/jpg"
+            srcset="/images/wordpress.jpg 1x, /images/wordpress@2x.jpg 2x"
+          />
+          <img class="feature__img" src="/images/wordpress.jpg" alt="" />
+        </picture>
+      </div>
+      <!-- 4RTH -->
+      <div class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--secondary">
+              <use xlink:href="images/sprite.svg#clock"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">24/7 Expert Support</h3>
+          <p class="text--small">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
+            numquam magni libero atque doloremque, fugit voluptate,
+          </p>
+          <a href="#" class="link-arrow">Learn More</a>
+        </div>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="/images/support.webp 1x, /images/support@2x.webp 2x"
+          />
+          <source
+            type="image/jpg"
+            srcset="/images/support.jpg 1x, /images/support@2x.jpg 2x"
+          />
+          <img class="feature__img" src="/images/support.jpg" alt="" />
+        </picture>
       </div>
     </section>
   </body>
