--- a/index.html
+++ b/index.html
@@ -15,122 +15,78 @@
     <title>Moshify</title>
   </head>
   <body>
-    <section class="block container">
+    <div class="block block--dark block--skewed-right showcase__block">
       <header class="block__header">
-        <h2>Host on the Cloud to keep Growing</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem, hic!
-        </p>
+        <h2>User-friendly Control Panel</h2>
       </header>
-      <!-- 1st -->
-      <div class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--secondary">
-              <use xlink:href="images/sprite.svg#easy"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">Super Easy To Use</h3>
-          <p class="text--small">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
-            numquam magni libero atque doloremque, fugit voluptate,
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
+      <div class="grid grid--1x2">
         <picture>
           <source
             type="image/webp"
-            srcset="/images/easy.webp 1x, /images/easy@2x.webp 2x"
-          />
+            srcset="/images/ipad.webp 1x, /images/ipad@2x.webp 2x" />
           <source
-            type="image/jpg"
-            srcset="/images/easy.jpg 1x, /images/easy@2x.jpg 2x"
-          />
-          <img class="feature__img" src="/images/easy.jpg" alt="" />
-        </picture>
-      </div>
+            type="image/png"
+            srcset="/images/ipad.png 1x, /images/ipad@2x.png 2x" />
 
-      <!-- 2ND -->
-      <div class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--secondary">
-              <use xlink:href="images/sprite.svg#computer"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">Simply Fast Websites</h3>
-          <p class="text--small">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
-            numquam magni libero atque doloremque, fugit voluptate,
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
+          <img class="showcase__image" src="/images/ipad.png" alt=""
+        /></picture>
+
+        <div class="showcase__content">
+          <ul class="list">
+            <li>
+              <div class="media">
+                <div class="media__image">
+                  <svg class="icon icon--primary">
+                    <use xlink:href="images/sprite.svg#snap"></use>
+                  </svg>
+                </div>
+                <div class="media__body">
+                  <h3 class="media__title">Easy Start & Managed Updates</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Voluptatem, maxime architecto. Enim eaque rerum autem
+                    blanditiis dolores atque soluta necessitatibus.
+                  </p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="media">
+                <div class="media__image">
+                  <svg class="icon icon--primary">
+                    <use xlink:href="images/sprite.svg#growth"></use>
+                  </svg>
+                </div>
+                <div class="media__body">
+                  <h3 class="media__title">Staging, GIT & WP-CLI</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Voluptatem, maxime architecto. Enim eaque rerum autem
+                    blanditiis dolores atque soluta necessitatibus.
+                  </p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="media">
+                <div class="media__image">
+                  <svg class="icon icon--primary">
+                    <use xlink:href="images/sprite.svg#wordpress"></use>
+                  </svg>
+                </div>
+                <div class="media__body">
+                  <h3 class="media__title">Dynamic Caching & More</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Voluptatem, maxime architecto. Enim eaque rerum autem
+                    blanditiis dolores atque soluta necessitatibus.
+                  </p>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
-        <picture>
-          <source
-            type="image/webp"
-            srcset="/images/fast.webp 1x, /images/fast@2x.webp 2x"
-          />
-          <source
-            type="image/jpg"
-            srcset="/images/fast.jpg 1x, /images/fast@2x.jpg 2x"
-          />
-          <img class="feature__img" src="/images/fast.jpg" alt="" />
-        </picture>
       </div>
-      <!-- 3RD -->
-      <div class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--secondary">
-              <use xlink:href="images/sprite.svg#wordpress"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">Wordpress Made Easy</h3>
-          <p class="text--small">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
-            numquam magni libero atque doloremque, fugit voluptate,
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
-        <picture>
-          <source
-            type="image/webp"
-            srcset="/images/wordpress.webp 1x, /images/wordpress@2x.webp 2x"
-          />
-          <source
-            type="image/jpg"
-            srcset="/images/wordpress.jpg 1x, /images/wordpress@2x.jpg 2x"
-          />
-          <img class="feature__img" src="/images/wordpress.jpg" alt="" />
-        </picture>
-      </div>
-      <!-- 4RTH -->
-      <div class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--secondary">
-              <use xlink:href="images/sprite.svg#clock"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">24/7 Expert Support</h3>
-          <p class="text--small">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
-            numquam magni libero atque doloremque, fugit voluptate,
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
-        <picture>
-          <source
-            type="image/webp"
-            srcset="/images/support.webp 1x, /images/support@2x.webp 2x"
-          />
-          <source
-            type="image/jpg"
-            srcset="/images/support.jpg 1x, /images/support@2x.jpg 2x"
-          />
-          <img class="feature__img" src="/images/support.jpg" alt="" />
-        </picture>
-      </div>
-    </section>
+    </div>
   </body>
 </html>
